Add payments api
