# app.py
@@ -3,52 +3,31 @@ import datetime
 import logging
 
 import connexion
-from connexion import NoContent
 
 import orm
 
-db_session = None
 
-
-def get_pets(limit, animal_type=None):
-    q = db_session.query(orm.Pet)
-    if animal_type:
-        q = q.filter(orm.Pet.animal_type == animal_type)
+def get_payments_history(limit):
+    q = db_session.query(orm.PaymentHistory)
     return [p.dump() for p in q][:limit]
 
 
-def get_pet(pet_id):
-    pet = db_session.query(orm.Pet).filter(orm.Pet.id == pet_id).one_or_none()
-    return pet.dump() if pet is not None else ('Not found', 404)
+def get_payment(payment_id):
+    payment = db_session.query(orm.PaymentHistory).filter(orm.PaymentHistory.id == payment_id).one_or_none()
+    return payment.dump() if payment is not None else ('Not found', 404)
 
 
-def put_pet(pet_id, pet):
-    p = db_session.query(orm.Pet).filter(orm.Pet.id == pet_id).one_or_none()
-    pet['id'] = pet_id
-    if p is not None:
-        logging.info('Updating pet %s..', pet_id)
-        p.update(**pet)
-    else:
-        logging.info('Creating pet %s..', pet_id)
-        pet['created'] = datetime.datetime.utcnow()
-        db_session.add(orm.Pet(**pet))
+def make_payment(payment):
+    logging.info('Creating payment')
+    payment['created'] = datetime.datetime.utcnow()
+    payment['successful'] = True
+    db_session.add(orm.PaymentHistory(**payment))
     db_session.commit()
-    return NoContent, (200 if p is not None else 201)
-
-
-def delete_pet(pet_id):
-    pet = db_session.query(orm.Pet).filter(orm.Pet.id == pet_id).one_or_none()
-    if pet is not None:
-        logging.info('Deleting pet %s..', pet_id)
-        db_session.query(orm.Pet).filter(orm.Pet.id == pet_id).delete()
-        db_session.commit()
-        return NoContent, 204
-    else:
-        return NoContent, 404
+    return {'successful': True}, 201
 
 
 logging.basicConfig(level=logging.INFO)
-db_session = orm.init_db('sqlite:///:memory:')
+db_session = orm.init_db('postgresql://postgres:admin@localhost:5432/soa-payment-service')
 app = connexion.FlaskApp(__name__)
 app.add_api('openapi.yaml')
 
